--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
 							<div class="info">
 								<div>
 									<i class="ri-map-pin-line"></i>
-									<p>A108 Adam Street<br />New York, NY 535022</p>
+									<p>A108 dummy street<br />New York, NY 535022</p>
 								</div>
 
 								<div>
