--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
 							<div class="contact-about">
 								<div class="logo mr-auto mb-3">
 
-									<a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+									<a href="index.html"><img src="assets/img/logo.png" width="200" alt="" class="img-fluid"></a>
 								</div>
 								<p>
 									Cras fermentum odio eu feugiat. Justo eget magna fermentum
@@ -678,7 +678,7 @@
 							data-aos-delay="300"
 						>
 							<form
-								action="forms/contact.php"
+								action=""
 								method="post"
 								role="form"
 								class="php-email-form"
@@ -775,7 +775,7 @@
 		<script src="assets/vendor/jquery/jquery.min.js"></script>
 		<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 		<script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-		<script src="assets/vendor/php-email-form/validate.js"></script>
+		<!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
 		<script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
 		<script src="assets/vendor/counterup/counterup.min.js"></script>
 		<script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
