--- a/partner.html
+++ b/partner.html
@@ -87,7 +87,7 @@
                 <div class="contact-about">
                     <div class="logo mr-auto mb-3">
        
-                        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+                        <a href="index.html"><img src="assets/img/logo.png" width="200" alt="" class="img-fluid"></a>
                       </div>
                     <p>
                         To partner with us you can follow thes few steps and we will get back to you asap                    </p>
